# aoc-starter

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  setup.py  slides.md  tox.ini
.github/workflows/: python-app.yml
aoc/: __init__.py  helpers.py  input_handler.py  input_manager.py  solution.py
aoc_framework/: __init__.py  helpers.py  input_handler.py  input_reader.py  solution.py  solution_manager.py
aoc_framework/assets/: solution_template.txt
aoc_framework/scripts/: aoc.py
docs/: conf.py  index.rst
solutions/: helpers.py  input_reader.py  solution.py  solution_manager.py
solutions/_2020/: _01.py  _02.py  _03.py  _04.py  _05.py  _06.py  _07.py  _08.py  _09.py  _10.py  _11.py  _12.py
solutions/assets/: solution_template.txt
solutions/scripts/: aoc.py
testing/: mixins.py
tests/: test_input_handler.py  test_input_manger.py  test_reformaters.py
tests/test_solution/: test_get_data.py  test_implementations.py  test_pop_lines.py  test_solution.py
