[metadata]
name = aoc_framework
version = 0.0.0
description = "Framework for creating and testing solutions to the Advent of Code."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mbmackenzie/adventofcode-framework
author = Matt Mackenzie
author_email = mbm2228@columbia.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    click
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    aoc = aoc_framework.scripts.aoc:cli

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
